test/library_error1.l1.out
about to cause witherr.cql's error
error: error: library_error1.l1:14: could not load library incwe3: error: ./../test/libs/incwe3.cql:2: could not load library incwe2: error: ./../test/libs/incwe2.cql:2: could not load library incwe1: error: ./../test/libs/incwe1.cql:2: could not load library incwe: error: ./../test/libs/incwe.cql:2: could not load library witherr: wrong type to %d conversion
<printstack-placeholder>
